[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
versionfile_source = hdmf_docutils/_version.py
versionfile_build = hdmf_docutils/_version.py
style = pep440-pre
tag_prefix = ''

[flake8]
exclude =
  .git,
  __pycache__,
  build/,
  dist/,
  versioneer.py
ignore =
  # E101 indentation contains mixed spaces and tabs
  E101,
  # E117 over-indented
  E117,
  # E121 continuation line under-indented for hanging indent
  E121,
  # E122 continuation line missing indentation or outdented
  E122,
  # E127 continuation line over-indented for visual indent
  E127,
  # E128 continuation line under-indented for visual indent
  E128,
  # E226 missing whitespace around arithmetic operator
  E226,
  # E501 line too long
  E501,
  # E722 do not use bare 'except'
  E722,
  # W191 indentation contains tabs
  W191,
  # W504 line break after binary operator
  W504,
  # W605 invalid escape sequence
  W605,
  T001, T002

[metadata]
description-file = README.rst
